frontend/test/should_fail/method_model_inh_ovrrd_failnp2.grg
#using "method_model_inh_ovrrd_failnp2.gm"
